--- a/empowerment.html
+++ b/empowerment.html
@@ -89,7 +89,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="introduction.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="empowerment.html" class="active"><strong aria-hidden="true">2.</strong> Empowerment</a></li><li class="chapter-item expanded "><a href="community.html"><strong aria-hidden="true">3.</strong> Community</a></li><li class="chapter-item expanded "><a href="learning.html"><strong aria-hidden="true">4.</strong> Learning</a></li><li class="chapter-item expanded "><a href="documentation.html"><strong aria-hidden="true">5.</strong> Documentation</a></li><li class="chapter-item expanded "><a href="performance.html"><strong aria-hidden="true">6.</strong> Performance</a></li><li class="chapter-item expanded "><a href="safety.html"><strong aria-hidden="true">7.</strong> Safety</a></li><li class="chapter-item expanded "><a href="concurrency.html"><strong aria-hidden="true">8.</strong> Concurrency</a></li><li class="chapter-item expanded "><a href="community.html"><strong aria-hidden="true">9.</strong> Community</a></li><li class="chapter-item expanded "><a href="tooling.html"><strong aria-hidden="true">10.</strong> Tooling</a></li><li class="chapter-item expanded "><a href="real_world_projects.html"><strong aria-hidden="true">11.</strong> Real-World Projects</a></li><li class="chapter-item expanded "><a href="future_prospects.html"><strong aria-hidden="true">12.</strong> Future Prospects</a></li><li class="chapter-item expanded "><a href="comparative_analysis.html"><strong aria-hidden="true">13.</strong> Comparative Analysis</a></li><li class="chapter-item expanded "><a href="ecosystem.html"><strong aria-hidden="true">14.</strong> Ecosystem</a></li><li class="chapter-item expanded "><a href="appendix/index.html"><strong aria-hidden="true">15.</strong> Appendix</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="rustlings_welcome_message.html"><strong aria-hidden="true">15.1.</strong> Rustlings Welcome Message</a></li><li class="chapter-item expanded "><a href="appendix/links.html"><strong aria-hidden="true">15.2.</strong> Links</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="introduction.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="empowerment.html" class="active"><strong aria-hidden="true">2.</strong> Empowerment</a></li><li class="chapter-item expanded "><a href="community.html"><strong aria-hidden="true">3.</strong> Community</a></li><li class="chapter-item expanded "><a href="getting_started.html"><strong aria-hidden="true">4.</strong> Getting Started</a></li><li class="chapter-item expanded "><a href="tooling.html"><strong aria-hidden="true">5.</strong> Tooling</a></li><li class="chapter-item expanded "><a href="ecosystem.html"><strong aria-hidden="true">6.</strong> Ecosystem</a></li><li class="chapter-item expanded "><a href="documentation.html"><strong aria-hidden="true">7.</strong> Documentation</a></li><li class="chapter-item expanded "><a href="safety.html"><strong aria-hidden="true">8.</strong> Safety</a></li><li class="chapter-item expanded "><a href="performance.html"><strong aria-hidden="true">9.</strong> Performance</a></li><li class="chapter-item expanded "><a href="concurrency.html"><strong aria-hidden="true">10.</strong> Concurrency</a></li><li class="chapter-item expanded "><a href="real_world.html"><strong aria-hidden="true">11.</strong> Real-World</a></li><li class="chapter-item expanded "><a href="future_prospects.html"><strong aria-hidden="true">12.</strong> Future Prospects</a></li><li class="chapter-item expanded "><a href="appendix/index.html"><strong aria-hidden="true">13.</strong> Appendix</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="appendix/ferris.html"><strong aria-hidden="true">13.1.</strong> Ferris</a></li><li class="chapter-item expanded "><a href="appendix/rustlings_welcome_message.html"><strong aria-hidden="true">13.2.</strong> Rustlings Welcome Message</a></li><li class="chapter-item expanded "><a href="appendix/sources_references.html"><strong aria-hidden="true">13.3.</strong> Sources and References</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -183,7 +183,7 @@ with confidence in a wider variety of domains than you did before.</p>
 of <a href="https://doc.rust-lang.org/book/">The Book</a>.</em></p>
 <p>Before discussing all the doors Rust can open,
 and all the never-before-imagined domains behind them,
-I'd like to first delve a little into this concept of &quot;empowerment&quot;.</p>
+I'd like to first delve a little into this concept of <em>empowerment</em>.</p>
 <p><img src="images/rust-fire-mario-equation.png" alt="rust-fire-mario-equation" /></p>
 <p>The image above comes from a <a href="https://brson.github.io/fireflowers/">delightful portrait</a>
 of the Rust community discussion at the very end of 2016, provided by Brian Anderson.
@@ -196,12 +196,12 @@ into a badass fireball-throwing Mario.</p>
 the confidence that comes with it. The certainty of delivering more reliable
 code right out of the box, and sometimes even receiving a performance improvement as a
 bonus. This is an experience that changes how you feel about your own code and 
-about your capabilities. This is, for me, what &quot;empowerment&quot; is about.</p>
+about your capabilities. This is, for me, what empowerment is about.</p>
 <p>The freedom that comes when the self-imposed barriers start to be demolished.
 The fearless environment where major mistakes can be
 caught even before compiling your code. And the guidance that prevents
 disorientation or hopelessness when diving into a lower-level abstraction. This
-is what &quot;empowerment&quot; feels like for me. And this, in my opinion, is what makes
+is what empowerment feels like for me. And this, in my opinion, is what makes
 Rust special and why it's one of the most loved languages ever.</p>
 
                     </main>
