--- a/print.html
+++ b/print.html
@@ -90,7 +90,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="introduction.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="empowerment.html"><strong aria-hidden="true">2.</strong> Empowerment</a></li><li class="chapter-item expanded "><a href="community.html"><strong aria-hidden="true">3.</strong> Community</a></li><li class="chapter-item expanded "><a href="learning.html"><strong aria-hidden="true">4.</strong> Learning</a></li><li class="chapter-item expanded "><a href="documentation.html"><strong aria-hidden="true">5.</strong> Documentation</a></li><li class="chapter-item expanded "><a href="performance.html"><strong aria-hidden="true">6.</strong> Performance</a></li><li class="chapter-item expanded "><a href="safety.html"><strong aria-hidden="true">7.</strong> Safety</a></li><li class="chapter-item expanded "><a href="concurrency.html"><strong aria-hidden="true">8.</strong> Concurrency</a></li><li class="chapter-item expanded "><a href="community.html"><strong aria-hidden="true">9.</strong> Community</a></li><li class="chapter-item expanded "><a href="tooling.html"><strong aria-hidden="true">10.</strong> Tooling</a></li><li class="chapter-item expanded "><a href="real_world_projects.html"><strong aria-hidden="true">11.</strong> Real-World Projects</a></li><li class="chapter-item expanded "><a href="future_prospects.html"><strong aria-hidden="true">12.</strong> Future Prospects</a></li><li class="chapter-item expanded "><a href="comparative_analysis.html"><strong aria-hidden="true">13.</strong> Comparative Analysis</a></li><li class="chapter-item expanded "><a href="ecosystem.html"><strong aria-hidden="true">14.</strong> Ecosystem</a></li><li class="chapter-item expanded "><a href="appendix/index.html"><strong aria-hidden="true">15.</strong> Appendix</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="rustlings_welcome_message.html"><strong aria-hidden="true">15.1.</strong> Rustlings Welcome Message</a></li><li class="chapter-item expanded "><a href="appendix/links.html"><strong aria-hidden="true">15.2.</strong> Links</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="introduction.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="empowerment.html"><strong aria-hidden="true">2.</strong> Empowerment</a></li><li class="chapter-item expanded "><a href="community.html"><strong aria-hidden="true">3.</strong> Community</a></li><li class="chapter-item expanded "><a href="getting_started.html"><strong aria-hidden="true">4.</strong> Getting Started</a></li><li class="chapter-item expanded "><a href="tooling.html"><strong aria-hidden="true">5.</strong> Tooling</a></li><li class="chapter-item expanded "><a href="ecosystem.html"><strong aria-hidden="true">6.</strong> Ecosystem</a></li><li class="chapter-item expanded "><a href="documentation.html"><strong aria-hidden="true">7.</strong> Documentation</a></li><li class="chapter-item expanded "><a href="safety.html"><strong aria-hidden="true">8.</strong> Safety</a></li><li class="chapter-item expanded "><a href="performance.html"><strong aria-hidden="true">9.</strong> Performance</a></li><li class="chapter-item expanded "><a href="concurrency.html"><strong aria-hidden="true">10.</strong> Concurrency</a></li><li class="chapter-item expanded "><a href="real_world.html"><strong aria-hidden="true">11.</strong> Real-World</a></li><li class="chapter-item expanded "><a href="future_prospects.html"><strong aria-hidden="true">12.</strong> Future Prospects</a></li><li class="chapter-item expanded "><a href="appendix/index.html"><strong aria-hidden="true">13.</strong> Appendix</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="appendix/ferris.html"><strong aria-hidden="true">13.1.</strong> Ferris</a></li><li class="chapter-item expanded "><a href="appendix/rustlings_welcome_message.html"><strong aria-hidden="true">13.2.</strong> Rustlings Welcome Message</a></li><li class="chapter-item expanded "><a href="appendix/sources_references.html"><strong aria-hidden="true">13.3.</strong> Sources and References</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -173,21 +173,22 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="introduction"><a class="header" href="#introduction">Introduction</a></h1>
-<p>Welcome, friend! Right from the start,
-I want to clarify that I'm not here to convince anyone of anything. 
-Nor am I claiming to provide the definitive source on Rust.
-My aim is to make it easier for those interested
-or curious to find the information they need to get started.
-And for those who, like me, appreciate constant reminders of why choosing Rust was the best decision ever.</p>
-<p>As a little Rustacean, I won't delve deeply into explaining Rust here,
-recognizing that many others, more qualified, have already done so.
-My goal is to curate some of these insights and resources
+<p>Hello, friend! Right from the start, I want to clarify that my aim isn't to
+convince anyone of anything, but to make it easier for those interested or
+curious to find the information they need to get started.
+And for those who, like me, appreciate constant reminders of why choosing Rust
+was the best decision ever: there's a good chance you'll find something valuable
+here.</p>
+<p>As a little Rustacean, I won't delve deeply into explaining Rust's arcane
+secrets, recognizing that many others, more qualified, have already done so.
+My goal is to curate some of these available resources and insights
 in a clear and meaningful way, hoping it resonates with you as well.</p>
-<p>This book is an opportunity for me to share my enthusiasm and help spread the
-word. Within these pages, you'll find links to articles, blog posts, videos,
+<p>This <a href="https://rust-lang.github.io/mdBook/">mdBook</a> is an opportunity
+for me to share my enthusiasm and help spread the word.
+Within these pages, you'll find links to articles, blog posts, videos,
 books, and any other relevant materials that have caught my attention and seem
 worth sharing.</p>
-<p>If you're still reading, I assume you're already on board.
+<p>If you've come this far, I assume you're already on board.
 So, let's embark on this journey together.</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="empowerment"><a class="header" href="#empowerment">Empowerment</a></h1>
 <p>If I had to summarize my entire experience with Rust so far in a single paragraph,
@@ -201,7 +202,7 @@ with confidence in a wider variety of domains than you did before.</p>
 of <a href="https://doc.rust-lang.org/book/">The Book</a>.</em></p>
 <p>Before discussing all the doors Rust can open,
 and all the never-before-imagined domains behind them,
-I'd like to first delve a little into this concept of &quot;empowerment&quot;.</p>
+I'd like to first delve a little into this concept of <em>empowerment</em>.</p>
 <p><img src="images/rust-fire-mario-equation.png" alt="rust-fire-mario-equation" /></p>
 <p>The image above comes from a <a href="https://brson.github.io/fireflowers/">delightful portrait</a>
 of the Rust community discussion at the very end of 2016, provided by Brian Anderson.
@@ -214,16 +215,16 @@ into a badass fireball-throwing Mario.</p>
 the confidence that comes with it. The certainty of delivering more reliable
 code right out of the box, and sometimes even receiving a performance improvement as a
 bonus. This is an experience that changes how you feel about your own code and 
-about your capabilities. This is, for me, what &quot;empowerment&quot; is about.</p>
+about your capabilities. This is, for me, what empowerment is about.</p>
 <p>The freedom that comes when the self-imposed barriers start to be demolished.
 The fearless environment where major mistakes can be
 caught even before compiling your code. And the guidance that prevents
 disorientation or hopelessness when diving into a lower-level abstraction. This
-is what &quot;empowerment&quot; feels like for me. And this, in my opinion, is what makes
+is what empowerment feels like for me. And this, in my opinion, is what makes
 Rust special and why it's one of the most loved languages ever.</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="community"><a class="header" href="#community">Community</a></h1>
 <p>In the previous section, I discussed how my experience with Rust
-can be summarized as <em>Empowerment</em>.
+can be summarized as <a href="./empowerment.html">Empowerment</a>.
 This is true, and I still think that it's a
 good starting point because it describes the potentials
 that are more closely related to Rust's aspects as a programming language.
@@ -246,50 +247,72 @@ This applies to the Rust programming language itself as well.
 So, while the upcoming sections may seem to cover various topics, in
 reality, I'm simply using different words, or finding new excuses,
 to talk about this <a href="images/celebration.jpg">vibrant</a> and welcoming community.</p>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="learning"><a class="header" href="#learning">Learning</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="getting-started"><a class="header" href="#getting-started">Getting Started</a></h1>
+<p>On Rust's official website, the <a href="https://www.rust-lang.org/learn">learn section</a>
+introduces three different options for getting started with Rust.</p>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="tooling"><a class="header" href="#tooling">Tooling</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="ecosystem"><a class="header" href="#ecosystem">Ecosystem</a></h1>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="documentation"><a class="header" href="#documentation">Documentation</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="performance"><a class="header" href="#performance">Performance</a></h1>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="safety"><a class="header" href="#safety">Safety</a></h1>
 <p>At a certain point, we as humankind simply start accepting that things could
 stop working for no apparent reason.</p>
 <p>&quot;That's just the way things are; for some
 obscure reason, they can behave in the most random manner&quot;.</p>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="performance"><a class="header" href="#performance">Performance</a></h1>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="concurrency"><a class="header" href="#concurrency">Concurrency</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="community-1"><a class="header" href="#community-1">Community</a></h1>
-<p>In the previous section, I discussed how my experience with Rust
-can be summarized as <em>Empowerment</em>.
-This is true, and I still think that it's a
-good starting point because it describes the potentials
-that are more closely related to Rust's aspects as a programming language.
-And by &quot;programming language&quot;, I'm also hinting at the idea of a &quot;tool&quot;.</p>
-<p>After all, it's the programming language aspects that people
-first think of and are curious about when reading about one, right?
-And a programming language is what Rust is, isn't it?
-Well, both questions can be answered with a simple &quot;yes&quot;.
-But the reasons I'm writing this,
-and probably the reasons you're reading it, go far beyond that.</p>
-<p>If you'll allow me to indulge once again in my old,
-probably foolish, habit of summarizing and speculating,
-I would suggest that what lies behind these reasons,
-or beneath Rust's shiny surface, is a community, really.
-I realize this could be said for many things,
-but I think it's particularly true for Rust.</p>
-<p>Everything I've said about empowerment, and every aspect I may address here,
-exists or holds true, because of Rust's community.
-This applies to the Rust programming language itself as well.
-So, while the upcoming sections may seem to cover various topics, in
-reality, I'm simply using different words, or finding new excuses,
-to talk about this <a href="images/celebration.jpg">vibrant</a> and welcoming community.</p>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="tooling"><a class="header" href="#tooling">Tooling</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="real-world-projects"><a class="header" href="#real-world-projects">Real-World Projects</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="real-world"><a class="header" href="#real-world">Real-World</a></h1>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="future-prospects"><a class="header" href="#future-prospects">Future Prospects</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="comparative-analysis"><a class="header" href="#comparative-analysis">Comparative Analysis</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="ecosystem"><a class="header" href="#ecosystem">Ecosystem</a></h1>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="appendix"><a class="header" href="#appendix">Appendix</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="ferris"><a class="header" href="#ferris">Ferris</a></h1>
+<p><img src="https://rustacean.net/assets/cuddlyferris.svg" alt="extra-cute crab" /></p>
+<p>If by any chance you ever wonder who this extra-cute crab is,
+let me gladly introduce you to <strong>Ferris</strong>, the unofficial mascot of Rust.</p>
+<p>Ferris even has their own <a href="https://rustacean.net/">special place</a>
+on the digital sea.</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="rustlings-welcome-message"><a class="header" href="#rustlings-welcome-message">Rustlings Welcome Message</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="links"><a class="header" href="#links">Links</a></h1>
-<h2 id="sources"><a class="header" href="#sources">Sources</a></h2>
-<p>Community section meme: https://dev.to/ben/meme-monday-5h2e#comment-24e9k</p>
+<pre><code class="language-no_rust">
+       welcome to...
+                 _   _ _
+  _ __ _   _ ___| |_| (_)_ __   __ _ ___
+ | '__| | | / __| __| | | '_ \ / _` / __|
+ | |  | |_| \__ \ |_| | | | | | (_| \__ \
+ |_|   \__,_|___/\__|_|_|_| |_|\__, |___/
+                               |___/
+
+Thanks for installing Rustlings!
+
+Is this your first time? Don't worry, Rustlings was made for beginners! We are
+going to teach you a lot of things about Rust, but before we can get
+started, here's a couple of notes about how Rustlings operates:
+
+1. The central concept behind Rustlings is that you solve exercises. These
+   exercises usually have some sort of syntax error in them, which will cause
+   them to fail compilation or testing. Sometimes there's a logic error instead
+   of a syntax error. No matter what error, it's your job to find it and fix it!
+   You'll know when you fixed it because then, the exercise will compile and
+   Rustlings will be able to move on to the next exercise.
+2. If you run Rustlings in watch mode (which we recommend), it'll automatically
+   start with the first exercise. Don't get confused by an error message popping
+   up as soon as you run Rustlings! This is part of the exercise that you're
+   supposed to solve, so open the exercise file in an editor and start your
+   detective work!
+3. If you're stuck on an exercise, there is a helpful hint you can view by typing
+   'hint' (in watch mode), or running `rustlings hint exercise_name`.
+4. If an exercise doesn't make sense to you, feel free to open an issue on GitHub!
+   (https://github.com/rust-lang/rustlings/issues/new). We look at every issue,
+   and sometimes, other learners do too so you can help each other out!
+5. If you want to use `rust-analyzer` with exercises, which provides features like
+   autocompletion, run the command `rustlings lsp`.
+
+Got all that? Great! To get started, run `rustlings watch` in order to get the first
+exercise. Make sure to have your editor open!
+
+
+</code></pre>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="sources-and-references"><a class="header" href="#sources-and-references">Sources and References</a></h1>
+<p>Some sources and references, organized by section.</p>
+<h2 id="community-1"><a class="header" href="#community-1">Community</a></h2>
+<p>Meme: <a href="https://dev.to/ben/meme-monday-5h2e#comment-24e9k">https://dev.to/ben/meme-monday-5h2e#comment-24e9k</a></p>
 
                     </main>
 
