--- a/real_world.html
+++ b/real_world.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Real-World Projects - Why Rust ?</title>
+        <title>Real-World - Why Rust ?</title>
 
 
         <!-- Custom HTML head -->
@@ -89,7 +89,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="introduction.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="empowerment.html"><strong aria-hidden="true">2.</strong> Empowerment</a></li><li class="chapter-item expanded "><a href="community.html"><strong aria-hidden="true">3.</strong> Community</a></li><li class="chapter-item expanded "><a href="learning.html"><strong aria-hidden="true">4.</strong> Learning</a></li><li class="chapter-item expanded "><a href="documentation.html"><strong aria-hidden="true">5.</strong> Documentation</a></li><li class="chapter-item expanded "><a href="performance.html"><strong aria-hidden="true">6.</strong> Performance</a></li><li class="chapter-item expanded "><a href="safety.html"><strong aria-hidden="true">7.</strong> Safety</a></li><li class="chapter-item expanded "><a href="concurrency.html"><strong aria-hidden="true">8.</strong> Concurrency</a></li><li class="chapter-item expanded "><a href="community.html"><strong aria-hidden="true">9.</strong> Community</a></li><li class="chapter-item expanded "><a href="tooling.html"><strong aria-hidden="true">10.</strong> Tooling</a></li><li class="chapter-item expanded "><a href="real_world_projects.html" class="active"><strong aria-hidden="true">11.</strong> Real-World Projects</a></li><li class="chapter-item expanded "><a href="future_prospects.html"><strong aria-hidden="true">12.</strong> Future Prospects</a></li><li class="chapter-item expanded "><a href="comparative_analysis.html"><strong aria-hidden="true">13.</strong> Comparative Analysis</a></li><li class="chapter-item expanded "><a href="ecosystem.html"><strong aria-hidden="true">14.</strong> Ecosystem</a></li><li class="chapter-item expanded "><a href="appendix/index.html"><strong aria-hidden="true">15.</strong> Appendix</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="rustlings_welcome_message.html"><strong aria-hidden="true">15.1.</strong> Rustlings Welcome Message</a></li><li class="chapter-item expanded "><a href="appendix/links.html"><strong aria-hidden="true">15.2.</strong> Links</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="introduction.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="empowerment.html"><strong aria-hidden="true">2.</strong> Empowerment</a></li><li class="chapter-item expanded "><a href="community.html"><strong aria-hidden="true">3.</strong> Community</a></li><li class="chapter-item expanded "><a href="getting_started.html"><strong aria-hidden="true">4.</strong> Getting Started</a></li><li class="chapter-item expanded "><a href="tooling.html"><strong aria-hidden="true">5.</strong> Tooling</a></li><li class="chapter-item expanded "><a href="ecosystem.html"><strong aria-hidden="true">6.</strong> Ecosystem</a></li><li class="chapter-item expanded "><a href="documentation.html"><strong aria-hidden="true">7.</strong> Documentation</a></li><li class="chapter-item expanded "><a href="safety.html"><strong aria-hidden="true">8.</strong> Safety</a></li><li class="chapter-item expanded "><a href="performance.html"><strong aria-hidden="true">9.</strong> Performance</a></li><li class="chapter-item expanded "><a href="concurrency.html"><strong aria-hidden="true">10.</strong> Concurrency</a></li><li class="chapter-item expanded "><a href="real_world.html" class="active"><strong aria-hidden="true">11.</strong> Real-World</a></li><li class="chapter-item expanded "><a href="future_prospects.html"><strong aria-hidden="true">12.</strong> Future Prospects</a></li><li class="chapter-item expanded "><a href="appendix/index.html"><strong aria-hidden="true">13.</strong> Appendix</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="appendix/ferris.html"><strong aria-hidden="true">13.1.</strong> Ferris</a></li><li class="chapter-item expanded "><a href="appendix/rustlings_welcome_message.html"><strong aria-hidden="true">13.2.</strong> Rustlings Welcome Message</a></li><li class="chapter-item expanded "><a href="appendix/sources_references.html"><strong aria-hidden="true">13.3.</strong> Sources and References</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -171,13 +171,13 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="real-world-projects"><a class="header" href="#real-world-projects">Real-World Projects</a></h1>
+                        <h1 id="real-world"><a class="header" href="#real-world">Real-World</a></h1>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="tooling.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="concurrency.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
@@ -191,7 +191,7 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="tooling.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="concurrency.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
